Make sure metadata is always aligned to the right

--- a/src/renderer/components/message/styles.module.scss
+++ b/src/renderer/components/message/styles.module.scss
@@ -2,6 +2,7 @@ $shortcutMenuWidth: 100px;
 
 .messageFooter {
   display: flex;
+  flex-direction: row-reverse;
   justify-content: space-between;
 }
 
